cmake_minimum_required(VERSION 3.23)
project(Tema3_OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tema3_OOP main.cpp "Toy Id Generator.h" "Toy Prototype.h" "Toy Id Generator Singleton.h" "Specialized Toy Class.h" "Toy Prototype Implementation.h" "Toy Id Generator Singleton.cpp" "Toy Prototype Implementation.cpp" "Specialized Toy Class.cpp" "Toy Id Generator.cpp")
